--- a/trunk/NoodleRoulette/src/NoodleRoulette.mxml
+++ b/trunk/NoodleRoulette/src/NoodleRoulette.mxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="965" height="400"
-				styleName="background" applicationComplete="init()">
+				styleName="background" applicationComplete="init()" xmlns:local="*">
 	<mx:Style source="assets/style.css"/>
 	<mx:Script>
 		<![CDATA[
+			import com.adobe.serialization.json.JSON;
+			
 			import mx.collections.ArrayCollection;
 			import mx.controls.Alert;
 			import mx.controls.Image;
@@ -12,6 +14,7 @@
 			import mx.effects.Move;
 			import mx.events.EffectEvent;
 			import mx.managers.PopUpManager;
+			import mx.rpc.events.ResultEvent;
 			
 			import uk.co.soulwire.cv.MotionTracker;
 			
@@ -27,6 +30,8 @@
 			var mainTimer:Timer;
 			
 			const MAIN_TIMER_INTERVAL:int = 10;
+			const SPEED_CHANGE_AFTER:int = 3000;
+			var mainTimerCounter:int = 0;
 			
 			public static var instance:NoodleRoulette;
 			
@@ -47,9 +52,16 @@
 				
 				this.moveEffectOfFork.target = fork;
 				
-				var controlModeSelectionPopup:ControllModeSelectionPopup = new ControllModeSelectionPopup;
+				var controlModeSelectionPopup:ControllModeSelectionPopup = new ControllModeSelectionPopup();
 				centerUIComponent(this, controlModeSelectionPopup);
 				PopUpManager.addPopUp(controlModeSelectionPopup, this, false);
+				
+				updateHighscoreList();				
+			}
+			
+			public function updateHighscoreList() {
+				hightscoreList.removeAllChildren();
+				httpGetHightScoreList.send(null);
 			}
 			
 			public static function centerUIComponent(parentUI:UIComponent, child:UIComponent) {
@@ -58,7 +70,7 @@
 			}
 			
 			public function startRoullete():void {
-				remainingTime = 10 * 1000;
+				remainingTime = 5 * 1000;
 				mainTimer = new Timer(MAIN_TIMER_INTERVAL, 0);
 				mainTimer.addEventListener(TimerEvent.TIMER, onTimer);
 				mainTimer.start();
@@ -72,11 +84,20 @@
 			
 			var lastDummyItem;
 			function onTimer(event:TimerEvent) {
+				mainTimerCounter += MAIN_TIMER_INTERVAL;
+				if (mainTimerCounter > SPEED_CHANGE_AFTER) {
+					mainTimerCounter = 0;
+					var rate:Number = Math.random() + 0.3;
+					itemManager.setSpeedRate(rate);
+				}
+				
 				//handle remaining time
 				remainingTime -= MAIN_TIMER_INTERVAL;
 				if (remainingTime <= 0) {
 					stopGame();
-					Alert.show("Game over");
+					var userInformationPopup:UserInformationPopup = new UserInformationPopup();
+					centerUIComponent(this, userInformationPopup);
+					PopUpManager.addPopUp(userInformationPopup, this, false);
 					return;
 				}
 				var min:int = remainingTime / (60 * 1000);
@@ -101,7 +122,7 @@
 					needNewItem = true;
 				} else {
 					var lastItem:Item = itemsInFrontBelt.getItemAt(itemsInFrontBelt.length - 1) as Item;
-					if (Math.abs(lastItem.moveEffect.x - lastItem.moveEffect.fromX) > 200) {
+					if (Math.abs(lastItem.moveEffect.x - lastItem.moveEffect.fromX) > 100) {
 						needNewItem = true;
 					}
 				}
@@ -149,10 +170,6 @@
 					true, true);
 			}
 			
-			public function outDebug(content:String) {
-				this.debug.text = content;
-			}
-			
 			public function moveForkHorizontally(xBy:int):void {
 				this.moveEffectOfFork.stop();
 				this.moveEffectOfFork.xBy = xBy;
@@ -176,7 +193,7 @@
 						var caughtItem:Item;
 						for (var i:int = 0; i < itemsInFrontBelt.length; i++) {
 							var item:Item = itemsInFrontBelt.getItemAt(i) as Item;
-							if (isOverlap(item.image, fork)) {
+							if (isCaught(item.image)) {
 								itemsInFrontBelt.removeItemAt( itemsInFrontBelt.getItemIndex(item) );
 								item.moveEffect.freeze();
 								if (gamePlayArea.getChildIndex(item.image) >= 0) {
@@ -242,11 +259,21 @@
 				forkDownEffect.play();
 			}
 			
-			public function isOverlap(obj1:UIComponent, obj2:UIComponent):Boolean {
-				var rect1:Rectangle = new Rectangle(obj1.x, obj1.y, obj1.width, obj1.height);
-				var rect2:Rectangle = new Rectangle(obj2.x, obj2.y, obj2.width, obj2.height);
-				return rect1.intersects(rect2);
+			function isCaught(target:UIComponent):Boolean {
+				var forkRect:Rectangle = fork.getRect(this);
+				var targetRect:Rectangle = new Rectangle(target.x + target.width / 6, target.y, target.width * 2 / 3, target.height);
+				
+				if (!forkRect.intersects(targetRect)) return false;
+				
+				var intersect:Rectangle = forkRect.intersection(targetRect);
+				return intersect.width >= forkRect.width / 2;
 			}
+			
+//			public function isOverlap(obj1:UIComponent, obj2:UIComponent):Boolean {
+//				var rect1:Rectangle = new Rectangle(obj1.x, obj1.y, obj1.width, obj1.height);
+//				var rect2:Rectangle = new Rectangle(obj2.x, obj2.y, obj2.width, obj2.height);
+//				return rect1.intersects(rect2);
+//			}
 			
 			public const CONTROL_MODE_KEYBOARD = 1;
 			public const CONTROL_MODE_MOUSE = 2;
@@ -315,8 +342,6 @@
 							if (motionY > 300) {
 								forkDown();
 							}
-							
-							debug.text = "x:" + motionX + ", y:" + motionY;
 						}
 					);
 					motionTrackerTimer.start();
@@ -365,14 +390,36 @@
 					fork.x = event.stageX;
 				}
 			}
+			
+			function finishGetHighScoreList(event:ResultEvent) {
+				var JSONResArr:String = String(httpGetHightScoreList.lastResult);
+				if (JSONResArr != null && JSONResArr.length > 0) {
+					var arrHighscore:Array = JSON.decode(JSONResArr);
+					if (arrHighscore != null) {
+						for (var i:int = 0; i < arrHighscore.length; i++) {
+							var hs = arrHighscore[i];
+							
+							var txtFullname:Label = new Label();
+							txtFullname.text = hs.fullname;
+							txtFullname.x = 0;
+							txtFullname.y = i * 30;
+							hightscoreList.addChild(txtFullname);
+							
+							var txtScore:Label = new Label();
+							txtScore.text = hs.score;
+							txtScore.x = 100;
+							txtScore.y = i * 30;
+							hightscoreList.addChild(txtScore);
+						}
+					}
+				}
+			}
 		]]>
 	</mx:Script>
 	
 	<mx:Canvas id="gamePlayArea" x="18" y="9" width="704" height="383" 
 			   horizontalScrollPolicy="off" verticalScrollPolicy="off">
 	</mx:Canvas>
-	
-	<mx:Label id="debug" x="741" y="145" text="Label"/>
 	
 	<mx:Image id="bowl" source="@Embed(source='assets/girls.png')" x="250" y="110"/>
 	
@@ -382,4 +429,16 @@
 	<mx:Canvas id="clock" x="596" y="10" backgroundImage="@Embed(source='assets/clock.png')" width="98" height="46">
 		<mx:Label id="time" text="00:00" styleName="time"/>
 	</mx:Canvas>
+	
+	<local:NoCachingHttpService
+		id="httpGetHightScoreList"
+		url="http://mekongmedia.com.vn/reeva3mien/highscore.php"
+		method="GET"
+		resultFormat="object"
+		result="finishGetHighScoreList(event)"
+		/>
+	<mx:Canvas id="hightscoreList" x="755" y="110" width="200" height="200"
+			   verticalScrollPolicy="auto" horizontalScrollPolicy="off">
+	</mx:Canvas>
+	
 </mx:Application>
